--- a/OpenEdXMobile/res/values-fr/strings.xml
+++ b/OpenEdXMobile/res/values-fr/strings.xml
@@ -89,9 +89,9 @@
   <string name="login_failed">Veuillez vérifier que votre nom d\'utilisateur ou adresse e-mail et mot de passe sont corrects puis réessayez.</string>
   <!--License Agreement related string on Login and Regiser screens-->
   <!--Create account agreement. Followed by list of agreement names like "End User License Agreement"-->
-  <string name="by_creating_account">En créant un compte, vous acceptez les {license} et {tos_and_honor_code} et vous reconnaissez que {platform_name} et chaque membre traitent vos données personnelles conformément à la {privacy_policy}</string>
+  <string name="by_creating_account">En créant un compte, vous acceptez les {license} et {tos_and_honor_code} et vous reconnaissez que {platform_name} et chaque membre traitent vos données personnelles conformément à la {privacy_policy}.</string>
   <!--Sign In agreement. Followed by list of agreement names like "End User License Agreement"-->
-  <string name="by_signing_in">En vous connectant à cette application, vous acceptez les {license} et {tos_and_honor_code} et vous reconnaissez que {platform_name} et chaque membre traitent vos données personnelles conformément à la {privacy_policy}</string>
+  <string name="by_signing_in">En vous connectant à cette application, vous acceptez les {license} et {tos_and_honor_code} et vous reconnaissez que {platform_name} et chaque membre traitent vos données personnelles conformément à la {privacy_policy}.</string>
   <!--Label for End User License Agreement-->
   <string name="licensing_agreement">engagements de licence {platform_name}</string>
   <!--Label for Terms of Service and Honor Code-->
