--- a/OpenEdXMobile/res/values-vi/strings.xml
+++ b/OpenEdXMobile/res/values-vi/strings.xml
@@ -89,9 +89,9 @@
   <string name="login_failed">Tên đăng nhập hoặc địa chỉ e-mail và mật khẩu bạn đã nhập không đúng.</string>
   <!--License Agreement related string on Login and Regiser screens-->
   <!--Create account agreement. Followed by list of agreement names like "End User License Agreement"-->
-  <string name="by_creating_account">Bằng việc tạo tài khoản, bạn dã đồng ý với {license} và {tos_and_honor_code} và bạn đã chấp nhận rằng {platform_name} và mỗi Thành Viên được xử lý thông tin cá nhân của bạn theo {privacy_policy}</string>
+  <string name="by_creating_account">Bằng việc tạo tài khoản, bạn dã đồng ý với {license} và {tos_and_honor_code} và bạn đã chấp nhận rằng {platform_name} và mỗi Thành Viên được xử lý thông tin cá nhân của bạn theo {privacy_policy}.</string>
   <!--Sign In agreement. Followed by list of agreement names like "End User License Agreement"-->
-  <string name="by_signing_in">Bằng việc đăng nhập vào ứng dụng này, bạn dã đồng ý với {license} và {tos_and_honor_code} và bạn đã chấp nhận rằng {platform_name} và mỗi Thành Viên được xử lý thông tin cá nhân của bạn theo {privacy_policy}</string>
+  <string name="by_signing_in">Bằng việc đăng nhập vào ứng dụng này, bạn dã đồng ý với {license} và {tos_and_honor_code} và bạn đã chấp nhận rằng {platform_name} và mỗi Thành Viên được xử lý thông tin cá nhân của bạn theo {privacy_policy}.</string>
   <!--Label for End User License Agreement-->
   <string name="licensing_agreement">{platform_name} Người dùng đồng ý với Giấy phép</string>
   <!--Label for Terms of Service and Honor Code-->
